# playground

./: README.md
csv-parser/: CMakeLists.txt  CSVParser.cpp  CSVParser.h  README.md  main.cpp
custom-vector/: CMakeLists.txt  MyVector.h  README.md  tests.cpp
doubly-linked-list/: doubly-linked-list.ts
hello-next/src/app/: layout.js  page.js
lottery-simulator/: README.md  index.html  package.json  pnpm-lock.yaml
lottery-simulator/src/: App.tsx  reducer.ts  types.ts  utils.ts
lottery-simulator/src/components/Button/: Button.tsx
lottery-simulator/src/components/MatchesCard/: MatchesCard.tsx  index.ts
next-storefront/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
next-storefront/app/: layout.tsx  page.tsx  providers.tsx
next-storefront/components/: CategoryHeader.tsx  ProductList.tsx  ProductListCard.tsx  Spinner.tsx  Stars.tsx
next-storefront/components/ProductDetail/: QuantityPicker.tsx  Variant.tsx  Variants.tsx
next-storefront/lib/: client.ts
next-storefront/types/: index.ts
stock-level/: README.md  index.ts  package.json  pnpm-lock.yaml
stock-level/src/: index.ts  types.ts  utils.ts
stock-level/src/commands/: processAddStock.ts  processOrder.ts  processSetStock.ts
stock-level/src/services/: processCommand.ts  processStockFile.ts
stock-level/src/tests/: parseItems.test.ts  parseLine.test.ts  processAddStock.test.ts  processOrder.test.ts  processSetStock.test.ts
stopwatch/: README.md  index.html  package.json  pnpm-lock.yaml
stopwatch/src/: App.test.tsx  App.tsx  index.css  reducer.ts  types.ts  utils.test.ts  utils.ts
(+25 files in other folders)
